[package]
name = "bfv12"
version = "0.1.0"
authors = ["Cathie Yun <cathieyun@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cathieyun/bfv"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "encryption", "FHE"]
description = "A pure-Rust implementation of B/FV homomorphic encryption"
edition = "2018"

[dependencies]
probability = "0.17.0"
rand = "0.6.5"
